--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>DevinDaboiCorp</title>
+  <title>Finny's math</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
   <style>
@@ -26,7 +26,7 @@
 
 
     footer {
-      color: lightgrey
+      color: blue
     }
 
     h3, h2, h1, p {
@@ -39,13 +39,13 @@
       margin-top: 10px;
       border-radius: 5px;
       border: none;
-      background-color: #4CAF50;
+      background-color: #00CED1;
       color: white;
       cursor: pointer;
       transition: background-color 0.3s ease;
     }
     button:hover {
-      background-color: #45a049;
+      background-color: #48D1CC;
     }
 
     .game-buttons {
@@ -60,7 +60,7 @@
       padding: 10px;
       font-size: 14px;
       border-radius: 10px;
-      background-color: #4CAF50;
+      background-color: #40E0D0;
       color: white;
       border: none;
       cursor: pointer;
@@ -85,13 +85,13 @@
   <div class="game-section">
     <p style="background-image: url('background.jpg');"></p>
     <br><br>
-    <h1>[PUT YOUR NAME HERE]'s Games</h1> <!-- Put Your Name Here -->
-    <h3>Replace this with a short description of the site or about you.</h3>
-    <p>Some of the games may take a while to load.</p>
+    <h1>Finny's Games</h1> <!-- Put Your Name Here -->
+    <h3>So my name is finnegan and i made this site :D.</h3>
+    <p>Some games might take a while to load btw.</p>
     <br><br><br>
     <div class="game-buttons">
       <button onclick="openGame('2048/2048.html')"> <img src="img/1.webp" class="rounded-image">Play 2048!</button>
-      <button onclick="openGame('baloonstd/baloonstd.html')"> <img src="img/2.webp" class="rounded-image">Play Baloons TD!</button>
+      <button onclick="openGame('bloonstd/bloonstd.html')"> <img src="img/2.webp" class="rounded-image">Play Bloons TD!</button>
       <button onclick="openGame('bitlife/bitlife.html')"> <img src="img/3.webp" class="rounded-image">Play Bitlife!</button>
       <button onclick="openGame('blockblast/blockblast.html')"> <img src="img/4.webp" class="rounded-image">Play Block Blast!</button>
       <button onclick="openGame('ClusterRush/clusterrush.html')"> <img src="img/5.webp" class="rounded-image">Play Cluster Rush!</button>
