--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <br><br><br>
     <div class="game-buttons">
       <button onclick="openGame('2048/2048.html')"> <img src="img/1.webp" class="rounded-image">Play 2048!</button>
-      <button onclick="openGame('bloonstd/bloonstd.html')"> <img src="img/2.webp" class="rounded-image">Play Bloons TD!</button>
+      <button onclick="openGame('baloonstd/bloonstd.html')"> <img src="img/2.webp" class="rounded-image">Play Bloons TD!</button>
       <button onclick="openGame('bitlife/bitlife.html')"> <img src="img/3.webp" class="rounded-image">Play Bitlife!</button>
       <button onclick="openGame('blockblast/blockblast.html')"> <img src="img/4.webp" class="rounded-image">Play Block Blast!</button>
       <button onclick="openGame('ClusterRush/clusterrush.html')"> <img src="img/5.webp" class="rounded-image">Play Cluster Rush!</button>
@@ -115,7 +115,8 @@
       <button onclick="openGame('Tombofthemask/tomb.html')"> <img src="img/24.webp" class="rounded-image">Play Tomb Of The Mask!</button>
       <button onclick="openGame('WorldsHardestGame/whg.html')"> <img src="img/25.webp" class="rounded-image">Play Worlds Hardest Game!</button>
       <button onclick="openGame('windowkill/windowkill.html')"> <img src="img/26.webp" class="rounded-image">Play Windowkill!</button>
-      <button onclick="openGame('yohoho/yohoho.html')"> <img src="img/27.webp" class="rounded-image">Play Yohoho.io!</button>
+      <button onclick="openGame('yohoho/yohoho.html')"> <img src="img/27.webp" class="rounded-image">Play Yohoho.io!
+      <button onclick="openGame('Hill-climb-racing/Hill-Climb-Racing-Lite.html')"> <img src="img/27.webp" class="rounded-image">Play Hill Climb Racing</button>
     </div>
   </div>
   <script>
