--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      font-family: Arial, sans-serif;
+      font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
 
       background-image: url('background.jpg');
       background-size: cover;
@@ -40,7 +40,7 @@
       border-radius: 5px;
       border: none;
       background-color: #00CED1;
-      color: white;
+      color: blue;
       cursor: pointer;
       transition: background-color 0.3s ease;
     }
@@ -61,7 +61,7 @@
       font-size: 14px;
       border-radius: 10px;
       background-color: #40E0D0;
-      color: white;
+      color: blue;
       border: none;
       cursor: pointer;
       transition: background-color 0.3s ease;
@@ -136,7 +136,7 @@
   </script>
   <br><br><br><br>
     <footer>
-    &copy; 2025 DevinDaboiCorporation Games. All rights reserved.
+    &copy; 2025 Finnygames All Rights Reserved
   </footer>
 </body>
 </html>
