--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
       <button onclick="openGame('windowkill/windowkill.html')"> <img src="img/26.webp" class="rounded-image">Play Windowkill!</button>
       <button onclick="openGame('yohoho/yohoho.html')"> <img src="img/27.webp" class="rounded-image">Play Yohoho.io!
       <button onclick="openGame('Hill-climb-racing/Hill-Climb-Racing-Lite.html')"> <img src="img/27.webp" class="rounded-image">Play Hill Climb Racing</button>
+      <button onclick="openGame('Ovo/Ovo.html')"> <img src="img/27.webp" class="rounded-image">Play Hill Climb Racing</button>
+      <button onclick="openGame('Geometrydash/Gm.html')"> <img src="img/27.webp" class="rounded-image">Play Hill Climb Racing</button>
+      <button onclick="openGame('Badparenting/Bp.html')"> <img src="img/27.webp" class="rounded-image">Play Hill Climb Racing</button>
+      <button onclick="openGame('1v1lol/1l')"> <img src="img/27.webp" class="rounded-image">Play Hill Climb Racing</button>
     </div>
   </div>
   <script>
