--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
       <button onclick="openGame('Geometrydash/Gm.html')"> <img src="img/27.webp" class="rounded-image">Play Geometry dash lite</button>
       <button onclick="openGame('Badparenting/Bp.html')"> <img src="img/27.webp" class="rounded-image">Play Bad parenting</button>
       <button onclick="openGame('1v1lol/1l')"> <img src="img/27.webp" class="rounded-image">Play 1v1 lol</button>
+      <button onclick="openGame('Hollowknight/Hk')"> <img src="img/27.webp" class="rounded-image">Play hollow knight</button>
+      <button onclick="openGame('Stickmanhook/Sh')"> <img src="img/27.webp" class="rounded-image">Play stickman hook</button>
+      <button onclick="openGame('Stealabrainrot/Sab')"> <img src="img/27.webp" class="rounded-image">Play 1v1 steal a brainrot</button>
     </div>
   </div>
   <script>
