--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
       <button onclick="openGame('1v1lol/1l')"> <img src="img/27.webp" class="rounded-image">Play 1v1 lol</button>
       <button onclick="openGame('Hollowknight/Hk')"> <img src="img/27.webp" class="rounded-image">Play hollow knight</button>
       <button onclick="openGame('Stickmanhook/Sh')"> <img src="img/27.webp" class="rounded-image">Play stickman hook</button>
-      <button onclick="openGame('Stealabrainrot/Sab')"> <img src="img/27.webp" class="rounded-image">Play 1v1 steal a brainrot</button>
+      <button onclick="openGame('Stealabrainrot/Sab')"> <img src="img/27.webp" class="rounded-image">Play steal a brainrot</button>
+      <button onclick="openGame('Capybara-clicker/Cc')"> <img src="img/27.webp" class="rounded-image">Play capybara clicker</button>
     </div>
   </div>
   <script>
