--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <button onclick="openGame('WorldsHardestGame/whg.html')"> <img src="img/25.webp" class="rounded-image">Play Worlds Hardest Game!</button>
       <button onclick="openGame('windowkill/windowkill.html')"> <img src="img/26.webp" class="rounded-image">Play Windowkill!</button>
       <button onclick="openGame('yohoho/yohoho.html')"> <img src="img/27.webp" class="rounded-image">Play Yohoho.io!
-      <button onclick="openGame('Hill-climb-racing/Hill-Climb-Racing-Lite.html')"> <img src="img/27.webp" class="rounded-image">Play Hill Climb Racing</button>
+      <button onclick="openGame('Hill-climb-racing/Hcrl.html')"> <img src="img/27.webp" class="rounded-image">Play Hill Climb Racing</button>
       <button onclick="openGame('Ovo/Ovo.html')"> <img src="img/27.webp" class="rounded-image">Play Ovo 3 dimensons</button>
       <button onclick="openGame('Geometrydash/Gm.html')"> <img src="img/27.webp" class="rounded-image">Play Geometry dash lite</button>
       <button onclick="openGame('Badparenting/Bp.html')"> <img src="img/27.webp" class="rounded-image">Play Bad parenting</button>
